# crew

./: 剧组AI代理项目简介.md
seven_crew/: README.md  pyproject.toml
seven_crew/src/seven_crew/: crew.py  main.py
