[project]
name = "seven_crew"
version = "0.1.0"
description = "seven-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
seven_crew = "seven_crew.main:run"
run_crew = "seven_crew.main:run"
train = "seven_crew.main:train"
replay = "seven_crew.main:replay"
test = "seven_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
